@@ -77,6 +77,7 @@ Application Changes:
 - Gear markups now properly apply when adding gear as plugins to cyberware, vehicles, and items inside of vehicles.
 - Fixed inability to rename Vehicles in Career mode.
 - Lifestyle qualities that are restricted to a specific base lifestyle type now work properly.
+- Added dedicated improvement types for removing skill defaulting penalties. They are `removeskillcategorydefaultpenalty`, `removeskillgroupdefaultpenalty`, and `removeskilldefaultpenalty` and remove skill defaulting penalties for the specified skill category, skill group, and skill, respectively. If any of them are left blank, they will remove all skill defaulting penalties.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
